hphp/hack/test/typecheck/coeffect_encapsulation/context_alias_error.php
<?hh
<<file:__EnableUnstableFeatures('context_alias_declaration')>>

newtype x as [] = [HH\Contexts\defaults];

function test()[\x]: void {}
